--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	runtime('org.springframework.boot:spring-boot-devtools')
+	compile("org.springframework.boot:spring-boot-starter-data-jpa")
+	compile("org.postgresql:postgresql")
     compile('com.google.guava:guava:20.0')
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
